src/test/ui/mismatched_types/trait-impl-fn-incompatibility.stderr
error[E0053]: method `foo` has an incompatible type for trait
  --> $DIR/trait-impl-fn-incompatibility.rs:21:15
   |
14 |     fn foo(x: u16);
   |               --- type in trait
...
21 |     fn foo(x: i16) { }
   |               ^^^ expected u16, found i16

error[E0053]: method `bar` has an incompatible type for trait
  --> $DIR/trait-impl-fn-incompatibility.rs:22:28
   |
15 |     fn bar(&mut self, bar: &mut Bar);
   |                            -------- type in trait
...
22 |     fn bar(&mut self, bar: &Bar) { }
   |                            ^^^^ types differ in mutability
   |
   = note: expected type `fn(&mut Bar, &mut Bar)`
              found type `fn(&mut Bar, &Bar)`

error: aborting due to 2 previous errors

